docs/api/qiskit/0.19/qiskit.circuit.library.RZGate.mdx
---
title: RZGate (v0.19)
description: API reference for qiskit.circuit.library.RZGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.RZGate
---

# RZGate

<Class id="qiskit.circuit.library.RZGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/rz.py" signature="RZGate(phi, label=None)" modifiers="class">
  Single-qubit rotation about the Z axis.

  This is a diagonal gate. It can be implemented virtually in hardware via framechanges (i.e. at zero error and duration).

  **Circuit symbol:**

  ```python
       ┌───────┐
  q_0: ┤ Rz(λ) ├
       └───────┘
  ```

  **Matrix Representation:**

$$
\begin{split}RZ(\lambda) = exp(-i\frac{\lambda}{2}Z) =
\begin{pmatrix}
e^{-i\frac{\lambda}{2}} & 0 \\
0 & e^{i\frac{\lambda}{2}}
\end{pmatrix}\end{split}
$$

  <Admonition title="See also" type="note">
    `U1Gate` This gate is equivalent to U1 up to a phase factor.

    > $$
    > U1(\lambda) = e^{i{\lambda}/2}RZ(\lambda)
    > $$

    Reference for virtual Z gate implementation: [1612.00858](https://arxiv.org/abs/1612.00858)
  </Admonition>

  Create new RZ gate.

  ## Attributes

  <span id="rzgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.RZGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="rzgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.RZGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="rzgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.RZGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="rzgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.RZGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="rzgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.RZGate.add_decomposition" signature="RZGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="rzgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.RZGate.assemble" signature="RZGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="rzgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.RZGate.broadcast_arguments" signature="RZGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="rzgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.RZGate.c_if" signature="RZGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="rzgate-control" />

  ### control

  <Function id="qiskit.circuit.library.RZGate.control" signature="RZGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a (mutli-)controlled-RZ gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="rzgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.RZGate.copy" signature="RZGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="rzgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.RZGate.inverse" signature="RZGate.inverse()">
    Return inverted RZ gate

    $RZ(\lambda){\dagger} = RZ(-\lambda)$
  </Function>

  <span id="rzgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.RZGate.is_parameterized" signature="RZGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="rzgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.RZGate.mirror" signature="RZGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="rzgate-power" />

  ### power

  <Function id="qiskit.circuit.library.RZGate.power" signature="RZGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="rzgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.RZGate.qasm" signature="RZGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="rzgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.RZGate.repeat" signature="RZGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="rzgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.RZGate.to_matrix" signature="RZGate.to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.

    **Return type**

    `ndarray`
  </Function>
</Class>

